packages/svelte/tests/validator/samples/reassign-derived-private-public-field/input.svelte
<script>
	class Test {
	  #deps = () => [];
	
	  deps = $derived.by(() => {
		return [];
	  });		
			
	  constructor(f = () => []) {
		this.#deps = f;
	  }
	}
  </script>